# kubernetes-local-services

./: .gitignore  Cargo.toml  README.md
.github/docs/: mysql.md  postgresql.md
databases/mysql/: deployment.yaml  secret.yaml  service.yaml
databases/postgresql/: deployment.yaml  secret.yaml  service.yaml
docs/: postgresql.md
event-streaming-services/kafka/: deployment.yaml  service.yaml
src/: main.rs
